exports[`<Commute /> Should render chart 1`] = `
<div
  className="route col-sm-6 col-md-4">
  <div
    className="card">
    <div
      className="card__name">
      <a
        href="http://foo.com"
        target="_blank">
        foo
      </a>
      
    </div>
    <div
      className="row">
      <div
        className="col-xs-5 col-sm-4 chart">
        <button
          className="card__fetch-button"
          onClick={[Function]}
          title="Refresh">
          <span
            className="chart-component">
            <div
              className={undefined}
              data={
                Object {
                  "className": "img-responsive",
                  "data": Array [
                    Object {
                      "color": "#e01e1b",
                      "value": 1,
                    },
                    Object {
                      "color": "#fc8d0d",
                      "value": 2,
                    },
                    Object {
                      "color": "#ede725",
                      "value": 3,
                    },
                    Object {
                      "color": "#45c43f",
                      "value": 4,
                    },
                  ],
                  "height": "90",
                  "options": Object {
                    "animateRotate": false,
                    "animateScale": true,
                    "animation": true,
                    "animationSteps": 40,
                    "percentageInnerCutout": 70,
                    "segmentShowStroke": false,
                    "showTooltips": false,
                  },
                  "width": "90",
                }
              }
              height={undefined}
              options={Object {}}
              width={
                Object {
                  "enqueueCallback": [Function],
                  "enqueueCallbackInternal": [Function],
                  "enqueueElementInternal": [Function],
                  "enqueueForceUpdate": [Function],
                  "enqueueReplaceState": [Function],
                  "enqueueSetState": [Function],
                  "isMounted": [Function],
                  "validateCallback": [Function],
                }
              } />
          </span>
        </button>
      </div>
      <div
        className="col-xs-7 col-sm-8 card-stats">
        <div
          className="card-stats__duration">
          <span>
            <span
              className="card-stats__unit">
               min
            </span>
          </span>
        </div>
        <div
          className="card-stats__detail">
          undefined mi
        </div>
        <div
          className="card-stats__detail" />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Commute /> Should render image 1`] = `
<div
  className="route col-sm-6 col-md-4">
  <div
    className="card">
    <div
      className="card__name">
      <a
        href="http://foo.com"
        target="_blank">
        foo
      </a>
      
    </div>
    <div
      className="row">
      <div
        className="col-xs-5 col-sm-4 chart">
        <button
          className="card__fetch-button"
          onClick={[Function]}
          title="Refresh">
          <img
            className="card__refresh-btn img-responsive center-block"
            src="images/refresh-circle.svg" />
        </button>
      </div>
      <div
        className="col-xs-7 col-sm-8 card-stats">
        <div
          className="card-stats__duration">
          –––
        </div>
        <div
          className="card-stats__detail">
          –––
        </div>
        <div
          className="card-stats__detail">
          –––
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Commute /> Should render in-progress image 1`] = `
<div
  className="route col-sm-6 col-md-4">
  <div
    className="card">
    <div
      className="card__name">
      <a
        href="http://foo.com"
        target="_blank">
        foo
      </a>
      
    </div>
    <div
      className="row">
      <div
        className="col-xs-5 col-sm-4 chart">
        <button
          className="card__fetch-button"
          onClick={[Function]}
          title="Refresh">
          <img
            className="card__refresh-btn card__refresh-btn--progress img-responsive center-block"
            src="images/refresh-circle.svg" />
        </button>
      </div>
      <div
        className="col-xs-7 col-sm-8 card-stats">
        <div
          className="card-stats__duration">
          –––
        </div>
        <div
          className="card-stats__detail">
          –––
        </div>
        <div
          className="card-stats__detail">
          –––
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Commute /> Should render placeholder name if not provided 1`] = `
<div
  className="route col-sm-6 col-md-4">
  <div
    className="card">
    <div
      className="card__name">
      <a
        href="http://foo.com"
        target="_blank">
        Your Commute
      </a>
      
    </div>
    <div
      className="row">
      <div
        className="col-xs-5 col-sm-4 chart">
        <button
          className="card__fetch-button"
          onClick={[Function]}
          title="Refresh">
          <img
            className="card__refresh-btn img-responsive center-block"
            src="images/refresh-circle.svg" />
        </button>
      </div>
      <div
        className="col-xs-7 col-sm-8 card-stats">
        <div
          className="card-stats__duration">
          –––
        </div>
        <div
          className="card-stats__detail">
          –––
        </div>
        <div
          className="card-stats__detail">
          –––
        </div>
      </div>
    </div>
  </div>
</div>
`;
